--- a/assets/i18n/cn.json
+++ b/assets/i18n/cn.json
@@ -5,6 +5,7 @@
   "fortuneTitle": "马年吉祥",
   "pleaseMakeDeposit": "请充值",
   "pleaseLogin": "请登入",
+  "ifNoAccPleaseRegister": "如果您还没有帐户, 请注册一个帐户。",
   "thinking": "签神正在凝神推算...",
   "breatheAndTapInstruction": "深呼吸，然后轻触屏幕任意处，开始仪式。",
   "errorMessages": {
