--- a/assets/i18n/th.json
+++ b/assets/i18n/th.json
@@ -5,6 +5,7 @@
   "fortuneTitle": "ความเจริญรุ่งเรืองในปีมะเมีย",
   "pleaseMakeDeposit": "กรุณาฝากเงิน",
   "pleaseLogin": "กรุณาเข้าสู่ระบบ",
+  "ifNoAccPleaseRegister": "หากคุณยังไม่มีบัญชี กรุณาสมัครสมาชิก",
   "thinking": "หมอดูกำลังทำนาย...",
   "breatheAndTapInstruction": "หายใจช้า ๆ แล้วแตะหน้าจอที่ใดก็ได้ เพื่อเริ่มพิธี",
   "errorMessages": {
